--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -7,17 +7,18 @@
         {{ blockNumber }}
       </p>
       <button
+        *ngIf="!walletConnected"
         type="button"
         class="btn btn-success btn-lg px-4 gap-3"
-        (click)="createWallet()"
+        (click)="connectToWallet()"
       >
-        {{ userWallet ? "Recreate" : "Create" }} Wallet
+        {{ walletConnected ? "Recreate" : "Connect" }} Wallet
       </button>
-      <div *ngIf="userWallet" class="card my-4">
+      <div *ngIf="walletConnected" class="card my-4">
         <div class="card-body">
           <h5 class="card-title">User Wallet</h5>
           <h6 class="card-subtitle mb-2 text-muted">
-            {{ userWallet.address }}
+            {{ walletId }}
           </h6>
           <p class="card-text">Balance: {{ userBalance }} ETH</p>
           <p class="card-text">Balance: {{ userTokenBalance }} MTK</p>
